--- a/index.html
+++ b/index.html
@@ -775,3 +775,62 @@ document.addEventListener("drop",e=>{
 
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+ 
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+ 
+<body>
+    <script>
+        (function () {
+            var a_idx = 0;
+            window.onclick = function (event) {
+                var a = new Array("❤耐心❤","❤温柔❤","❤微笑❤","❤不要生气❤","❤多一点理解❤","❤多一点关心❤","❤认真倾听❤","❤体谅患者❤","❤温和沟通❤",
+  "❤细心检查❤",  "❤平和心态❤",  "❤善待生命❤","❤耐心沟通❤",  "❤倾听诉求❤",  "❤理解焦虑❤",  "❤换位思考❤",  "❤语气温和❤",  "❤解释清楚❤",  "❤不与患者争辩❤",
+  "❤医患互信❤",  "❤化解误解❤",  "❤控制情绪❤",  "❤多点微笑❤",  "❤缓和紧张❤",  "❤尊重患者❤",  "❤安抚情绪❤",  "❤共渡难关❤");
+ 
+                var heart = document.createElement("b"); //创建b元素
+                heart.onselectstart = new Function('event.returnValue=false'); //防止拖动
+ 
+                document.body.appendChild(heart).innerHTML = a[a_idx]; //将b元素添加到页面上
+                a_idx = (a_idx + 1) % a.length;
+                heart.style.cssText = "position: fixed;left:-100%;"; //给p元素设置样式
+ 
+                var f = 16, // 字体大小
+                    x = event.clientX - f / 2, // 横坐标
+                    y = event.clientY - f, // 纵坐标
+                    c = randomColor(), // 随机颜色
+                    a = 1, // 透明度
+                    s = 2; // 放大缩小
+ 
+                var timer = setInterval(function () { //添加定时器
+                    if (a <= 0) {
+                        document.body.removeChild(heart);
+                        clearInterval(timer);
+                    } else {
+                        heart.style.cssText = "font-size:16px;cursor: default;position: fixed;color:" +
+                            c + ";left:" + x + "px;top:" + y + "px;opacity:" + a + ";transform:scale(" +
+                            s + ");";
+ 
+                        y--;
+                        a -= 0.016;
+                        s += 0.002;
+                    }
+                }, 15)
+ 
+            }
+            // 随机颜色
+            function randomColor() {
+ 
+                return "rgb(" + (~~(Math.random() * 255)) + "," + (~~(Math.random() * 255)) + "," + (~~(Math
+                .random() * 255)) + ")";
+ 
+            }
+        }());
+    </script>
+</body>
+ 
+</html>
