--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ h1 {
   color: black;
   margin-top: 3rem;
   margin-bottom: 6rem;
-  font-size: 3rem;
+  font-size: 6rem;
 }
 
 h2 {
@@ -200,7 +200,7 @@ button:hover {
   width: 48%;
   margin-right: 1%;
   font-size: 2rem;
-    margin-top: 8px;
+  margin-top: 8px;
 }
 
 
@@ -262,10 +262,10 @@ div[style*="text-align: center"] {
 </head>
 <body>
  
-<div style="display:flex; align-items:center; justify-content:center; gap:0.5em;">
+<div style="display:flex; align-items:center; justify-content:center; gap:0.5rem;">
   <img src="https://mac-upic.oss-cn-chengdu.aliyuncs.com/logo.png" 
-       style="width:auto; height:2em;">
-  <h1 style="margin:0;">创二病人分配系统</h1>
+       style="width:auto; height:7rem;">
+  <h1 style="margin:0;">创二病人·看板</h1>
 </div>
    <br> 
   
@@ -550,6 +550,7 @@ btnContainer.appendChild(deleteBtn);
   const confirmBtn = document.createElement("button");
   confirmBtn.innerText = "确认";
   confirmBtn.style.marginRight = "1%";
+  confirmBtn.style.backgroundColor = "green";  // 绿色
 
   const cancelBtn = document.createElement("button");
   cancelBtn.innerText = "取消";
